# FEater

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
feater/: __init__.py  constants.py  dataloader.py  io.py  utils.py
feater/models/: __init__.py  convnext.py  deeprank.py  dgcnn.py  fused.py  gnina.py  gnns.py  networks_jax.py  paconv.py  pointnet.py  pointnet2.py  resnet.py  voxnet.py
feater/scripts/: __init__.py  benchmark_hdf.py  coord_to_voxel.py  fix_residue.py  generate_miniset.py  hilbert_hdf.py  make_HDF.py  make_NetCDF.py  make_coord.py  make_coord_traj.py  make_hilbert.py  make_surface.py  make_voxel.py  modelnet_dataset.py  process_deshaw_traj.py  process_dual_residue.py  process_pdb.py  process_traj_single_res.py  process_trajectories.py  surf_HDF.py  test_model.py  train_3dcnn.py  train_fused_models.py  train_gnns.py  train_models.py  train_pointnet.py  train_pointnet_surf.py  train_resnet.py  train_voxnet.py  view_coord.py  view_surf.py  view_traj.py  view_voxel.py  voxel_HDF.py
slurm_examples/: Make_DES_Traj.slurm  Make_Hilbert.slurm  Make_Surf.slurm  Make_Voxel.slurm  baseline_model.slurm  benchmark_inference.slurm  benchmark_models.slurm  convergence_inference.slurm  convergence_training.slurm  data_abundance_inference.slurm  data_abundance_training.slurm  fused_models.slurm  model_inference.slurm  train_deeprank_Minisets.slurm  train_gnn.slurm  train_modelnet_dataset.slurm  train_pointnet_crd_Minisets.slurm  train_pointnet_dualcrd.slurm  train_pointnet_dualsrf.slurm  train_pointnet_sincrd.slurm  train_pointnet_sinsrf.slurm  train_pointnet_surf_Minisets.slurm  train_resnet_Minisets.slurm  train_resnet_dual.slurm  train_resnet_single.slurm  train_voxnet_Minisets.slurm  train_voxnet_dual.slurm  train_voxnet_single.slurm  traj_dataset_generation.sh  traj_inference.slurm
src/: Makefile  interpolate.cu  interpolate.h  interpolate_py.cpp  utils.h
