[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "feater"  # as it would appear on PyPI
version = "0.0.1"
description = "A Python package for feater "
authors = [
    {name = "Yang Zhang", email = "y.zhang@bioc.uzh.ch"},
]
dependencies = [
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
include-package-data = true


[project.entry-points.console_scripts]
viewcoord = "feater.scripts.view_coord:console_interface"
viewsurf = "feater.scripts.view_surf:console_interface"
viewvoxel = "feater.scripts.view_voxel:console_interface"

# viewhilb = "feater.scripts.view_voxel:"
# fixres = "feater.scripts.fix_residue:run_resfixer"
# pdbprocess = "feater.scripts.process_pdb:run_pdbprocess"
# pdb2hdf = "feater.scripts.make_HDF:console_interface"
# pdb2nc = "feater.scripts.make_NetCDF:console_interface"

