[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "feater"  # as it would appear on PyPI
version = "0.0.1"
description = "A Python package for feater "
authors = [
    {name = "Yang Zhang", email = "y.zhang@bioc.uzh.ch"},
]
dependencies = [
    "h5py",
    "numpy<2.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
include-package-data = true


[project.entry-points.console_scripts]
viewcoord = "feater.scripts.view_coord:console_interface"
viewsurf = "feater.scripts.view_surf:console_interface"
viewvoxel = "feater.scripts.view_voxel:console_interface"

makecoord = "feater.scripts.make_coord:console_interface"
makesurface = "feater.scripts.make_surface:console_interface"
makevoxel = "feater.scripts.make_voxel:console_interface"
makehilbert = "feater.scripts.make_hilbert:console_interface"

benchmarkdataset = "feater.scripts.benchmark_hdf:console_interface"
feater_train = "feater.scripts.train_models:console_interface"
feater_miniset = "feater.scripts.generate_miniset:console_interface"

# viewhilb = "feater.scripts.view_voxel:"
# fixres = "feater.scripts.fix_residue:run_resfixer"



